bug: Hide video on mobile outside of chrome
SPLASH SCREEN: Video stops playing in mobile mode.

--- a/src/pages/Splash/Splash.module.scss
+++ b/src/pages/Splash/Splash.module.scss
@@ -32,6 +32,14 @@
 
 .video {
   margin: 0 auto;
+
+  &:not(.video-chrome) {
+    display: none;
+
+    @include medium {
+      display: block;
+    }
+  }
 }
 
 .productLink {
